tests/invalid/Void_Invalid_2.whiley
import * from whiley.lang.*

void f(int x, void z):
    return
